# spade

./: .gitignore  .travis.yml  Architecture.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: spade_actions.yaml
benches/: README.md  benchmark_utilities.rs  benchmarks.rs  bulk_load_benchmark.rs  bulk_load_vs_incremental.rs  delaunay.rs  harness.rs  input_size_benchmark.rs  insert_benchmark.rs  interpolation_benchmark.rs  locate_benchmark.rs
delaunay_compare/: Cargo.toml  README.md
delaunay_compare/benches/: bench_utilities.rs  delaunay_comparison.rs
delaunay_compare/examples/: Europe_coastline.dbf  real_data_benchmark.rs
delaunay_compare/src/: cdt_crate.rs  delaunator_crate.rs  lib.rs  spade_crate.rs
examples/: Makefile  delaunay_analysis.rs  inspect.rs  interactive.rs  interpolation_bench.rs  interpolation_bench.rs.ignore  nninterpolation.rs  rtree_analysis.rs  rtree_bulk_insertion.rs
examples/interactivedemo/: Cargo.toml
examples/interactivedemo/src/: cdt_example.rs  delaunay_example.rs  graphics.rs  main.rs  rtree_example.rs
examples/interpolation/: main.rs
examples/nninterpolation/: Cargo.toml  nninterpolation.rs
examples/nninterpolation/src/: constants.rs  delaunay_creation.rs  interpolation.rs  main.rs
examples/rtreevis/: Cargo.toml  rtreevis.rs
examples/rtreevis/utils/: exampleapplication.rs  mod.rs
examples/svg_renderer/: main.rs  scenario.rs  scenario_list.rs
examples/svg_renderer/quicksketch/: color.rs  convert.rs  mod.rs
examples/utils/: exampleapplication.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bulk_load_cdt_fuzz.rs  bulk_load_fuzz.rs  bulk_load_int_fuzz.rs  delaunay_refinement_fuzz.rs  fuzz_shared.rs
images/: interpolation_barycentric.img  interpolation_nearest_neighbor.img  interpolation_nn_c0.img  interpolation_nn_c1.img  preview.html
src/: bigvec.rs  boundingrect.rs  boundingvolume.rs  cdt.rs  dcel.rs  delaunay.rs  delaunay_triangulation.rs  edges_in_rectangle_iterator.rs  exactpred.rs  flood_fill_iterator.rs  interpolation.rs  intersection_iterator.rs  kernels.rs  lib.rs  lookup.rs  mint_support.rs  misc.rs  planarsubdivision.rs  point.rs  point_traits.rs  primitives.rs  rtree.rs  subdivision.rs  test_utilities.rs  testutils.rs  traits.rs  triangulation.rs  vector_traits.rs  vertices_in_rectangle_iterator.rs
src/delaunay/: cdt.rs  dcel.rs  delaunay2d.rs  delaunay_basic.rs  delaunay_locate.rs  delaunay_lookup.rs  line_intersection_iterator.rs  mod.rs
src/delaunay_core/: bulk_load.rs  bulk_load_fuzz_tests.rs  dcel.rs  dcel_operations.rs  delaunay_core_impl.rs  hint_generator.rs  interpolation.rs  line_side_info.rs  math.rs  mod.rs  refinement.rs  refinement_fuzz_tests.rs  triangulation_ext.rs
src/delaunay_core/handles/: handle_defs.rs  handle_impls.rs  mod.rs  public_handles.rs
src/delaunay_core/handles/iterators/: circular_iterator.rs  fixed_iterators.rs  hull_iterator.rs  mod.rs
