[package]
name = "spade"
version = "2.1.0"
authors = ["Stefan Altmayer <stoeoef@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/spade"
description = "Delaunay triangulations for the rust ecosystem"
repository = "https://github.com/Stoeoef/spade"
license = "MIT OR Apache-2.0"
autobenches = false

[lib]
bench = false

[dependencies]
smallvec = "1"
robust = "0.2"
num-traits = "0.2"
optional = "0.5"

[dependencies.serde]
package = "serde"
optional = true
version = "1"
features = ["derive"]

[features]
serde = ["optional/serde", "dep:serde"]

[workspace]
members = ["delaunay_compare"]

[dev-dependencies]
approx = "0.5"
rand = "0.8.3"
cgmath = "0.18.0"
svg = "0.13.0"
float_next_after = "1"
criterion = { version = "0.4.0", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false