[package]
name = "spade"
version = "2.3.0"
authors = ["Stefan Altmayer <stoeoef@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/spade"
description = "Delaunay triangulations for the rust ecosystem"
repository = "https://github.com/Stoeoef/spade"
license = "MIT OR Apache-2.0"
autobenches = false

[lib]
bench = false

[features]
default = [ "std" ]
std = []

[dependencies]
smallvec = "1"
robust = "1.1.0"
num-traits = "0.2"
hashbrown  = "0.14.2"

[dependencies.serde]
package = "serde"
optional = true
version = "1"
default-features = false
features = [ "derive", "alloc" ]

[workspace]
members = ["delaunay_compare"]

[dev-dependencies]
approx = "0.5"
rand = "0.8.3"
cgmath = "0.18.0"
svg = "0.14.0"
float_next_after = "1"
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false
