[package]
name = "spade"
version = "2.10.0"
authors = ["Stefan Altmayer <stoeoef@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/spade"
description = "Delaunay triangulations for the rust ecosystem"
repository = "https://github.com/Stoeoef/spade"
license = "MIT OR Apache-2.0"
autobenches = false
categories = ["algorithms", "data-structures", "graphics", "mathematics", "science::geo"]
keywords = ["Delaunay", "CDT", "geometry", "triangulation", "voronoi"]

[lib]
bench = false

[features]
default = ["std"]
std = []

[dependencies]
smallvec = "1.13"
robust = "1.1.0"
num-traits = "0.2"
hashbrown = "0.14.2"

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.0"
default-features = false
features = ["derive", "alloc"]

[dependencies.mint]
package = "mint"
optional = true
default-features = false
version = "0.5.9"

[workspace]
members = ["delaunay_compare"]

[dev-dependencies]
approx = "0.5"
rand = "0.8.3"
cgmath = "0.18.0"
svg = "0.17.0"
float_next_after = "1"
image = "0.25.1"
tiny-skia = "0.11.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
base64 = "0.22.1"
anyhow = "1.0.75"
shapefile = "0.6.0"

[[bench]]
name = "benchmarks"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
